# hamming_rs

./: .gitignore  Cargo.toml  README.md
benches/: distance.rs
src/: lib.rs  lib_avx2.rs  lib_test.rs  utils.rs
