[package]
name = "hamming_rs"
version = "0.2.24"
edition = "2021"
authors = ["Regis Portalez <info@example.com>"]
license = "MIT"
keywords = ["popcount", "hamming", "avx2"]
homepage = "https://github.com/JeWaVe/hamming_rs"
repository = "https://github.com/JeWaVe/hamming_rs"
documentation = "https://docs.rs/hamming_rs/"
readme = "README.md"
exclude = [
    "target/criterion/*",
    ".cargo_vcs_info.json",
    ".gitignore",
    "Cargo.toml.orig",
]

description = """
Computes Hamming distance and weight -- if available and beneficial, uses a highly optimized avx2 implementation
"""


[dependencies]
log = "0.4.26"

[dev-dependencies]
rand = "0.9.0"
hamming = "0.1.3"
strsim = "0.11.1"
criterion = "0.5.1"

[profile.dev]
opt-level = 0              # Use slightly better optimizations.
overflow-checks = true     


[profile.release]
debug-assertions = false
debug = false
opt-level = 3              # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.

[[bench]]
name = "distance"
harness = false